completed functionality of twelve and 24 hour buttons and worked on css

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #clock{
     font-family: 'Orbitron', sans-serif;
-    font-size: 175px;
+    font-size: 130px;
     color: #f1ffc9;
     letter-spacing: .1em;
 }
@@ -19,7 +19,35 @@ h1{
     border: white solid;
 }
 
-#buttons{
-    background-color: #f1ffc9;
-    color: #0d0f10;
+#twelveHour, #twentyFourHour{
+    font-family: 'orbitron', sans-serif;
+    display: inline-block;
+    border: none;
+    padding: 3rem 3rem;
+    margin: 0;
+    text-decoration: none;
+    background: #0d0f10;
+    color: #f1ffc9;
+
+    font-size: 3rem;
+    cursor: pointer;
+    text-align: center;
+    transition: background 250ms ease-in-out, 
+                transform 150ms ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+    background: #0053ba;
+}
+
+button:focus {
+    outline: 1px solid #fff;
+    outline-offset: -4px;
+}
+
+button:active {
+    transform: scale(0.99);
 }
