--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 #clock{
     font-family: 'Orbitron', sans-serif;
-    font-size: 130px;
+    font-size: 100px;
     color: #f1ffc9;
     letter-spacing: .1em;
+    padding: -20px;
 }
 
 
@@ -29,7 +30,7 @@ h1{
     background: #0d0f10;
     color: #f1ffc9;
 
-    font-size: 3rem;
+    font-size: 2rem;
     cursor: pointer;
     text-align: center;
     transition: background 250ms ease-in-out, 
